--- a/Final.rmd
+++ b/Final.rmd
@@ -25,6 +25,7 @@ mutate(across(where(is.character), as.factor))
 A new  preventative vaccine (covid91) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
 
 ```{r, include='FALSE'}
+# Not included to make things look neater  
 Males<- filter(FinalData, sex== "M"); 
 Females <- filter(FinalData, sex== "F")
 lgbtq <- filter(FinalData, LGBTQ=="gay")
@@ -35,42 +36,84 @@ druggies <- filter(FinalData, DrugUser=="yes")
 ## Males
 
 
-### Bar Graph
+### Descriptive Results
 
-### Numerical
 
-### Infermental
+#### Graphical Descriptive Results
+
+```{r}
+ddm <- Males %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicCm <- ggplot(ddm,aes(x=infected,y=count,fill= treatment))
+basicCm + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCCm <- ggplot(ddm,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCCm + geom_bar(stat="identity", position = "dodge")
+```
+
+
+
+
+
+#### Numerical Descriptive Results
+
+
+###Inferential Results
+
+
+### Effectiveness 
+
 
 
 ## Females
 
+### Descriptive Results
 
-### Bar Graph
+#### Graphical Descriptive Results
 
-### Numerical
+#### Numerical Descriptive Results
 
-### Infermental
+###Inferential Results
+
+
+### Effectiveness 
 
 
 
 ## LGBTQ
 
 
-### Bar Graph
+### Descriptive Results
 
-### Numerical
+#### Graphical Descriptive Results
 
-### Infermental
+#### Numerical Descriptive Results
+
+###Inferential Results
+
+
+### Effectiveness 
+
 
 
 
 
 ## Druggies
 
+### Descriptive Results
 
-### Bar
+#### Graphical Descriptive Results
 
-### Numerical
+#### Numerical Descriptive Results
 
-### Infermental
+###Inferential Results
+
+
+### Effectiveness 
+
 
