--- a/Final.rmd
+++ b/Final.rmd
@@ -86,31 +86,24 @@ Here we have taken the male group for one last time and     have ran the Fisher'
 ### Efficacy
 
 ```{r}
+#used to create efficacy for males
 efficacym <- ((2.092161/(1+2.092161)*100))
-efficacym
-```
 
-```{r}
 malefisherlow <- (malefisher$conf.int[1])
-malefisherlow
+
 malefisherhigh<- (malefisher$conf.int[2])
-malefisherhigh
-```
 
-```{r}
 efficacymalelow <- (malefisherlow/(1+malefisherlow)*100)
-efficacymalelow
-```
 
-```{r}
 efficacymalehigh <- (malefisherhigh/(1+malefisherhigh)*100)
-efficacymalehigh
 ```
 
-Here we have the confidence interval of 95%  from`r efficacymalelow` to `r efficacymalehigh`.
+Here we have the confidence interval of 95%  from `r efficacymalelow` to `r efficacymalehigh`. With the efficacy for males being `r efficacym`%
 
 
 ### Conclusion and Recommendation
+
+
 
 
 ## Females
