--- a/Final.rmd
+++ b/Final.rmd
@@ -87,7 +87,9 @@ Here we have taken the male group for one last time and     have ran the Fisher'
 
 ```{r}
 #used to create efficacy for males
-efficacym <- ((2.092161/(1+2.092161)*100))
+
+
+efficacym <- ((malefisher$estimate/(1+malefisher$estimate)*100))
 
 malefisherlow <- (malefisher$conf.int[1])
 
@@ -98,7 +100,8 @@ efficacymalelow <- (malefisherlow/(1+malefisherlow)*100)
 efficacymalehigh <- (malefisherhigh/(1+malefisherhigh)*100)
 ```
 
-Here we have the confidence interval of 95%  from `r efficacymalelow` to `r efficacymalehigh`. With the efficacy for males being `r efficacym`%
+
+With the efficacy being`r efficacym`% Here we have the confidence interval of 95%  from `r efficacymalelow` to `r efficacymalehigh`. 
 
 
 ### Conclusion and Recommendation
