--- a/Final.rmd
+++ b/Final.rmd
@@ -101,7 +101,7 @@ efficacymalehigh <- (malefisherhigh/(1+malefisherhigh)*100)
 ```
 
 
-With the efficacy being`r efficacym`% Here we have the confidence interval of 95%  from `r efficacymalelow` to `r efficacymalehigh`. 
+With the efficacy being `r efficacym`% Here we have the confidence interval of 95%  from `r efficacymalelow` to `r efficacymalehigh`. 
 
 
 ### Conclusion and Recommendation
@@ -145,10 +145,34 @@ colPerc(table1f)
 chisq.test(table1f)
 chisqtestGC(table1f)
 fisher.test(table1f)
+femalefisher<- fisher.test(table1f)
+femalefisher
 ```
 
 
 ### Efficacy 
+
+```{r}
+#used to create efficacy for males
+
+
+efficacyf <- ((femalefisher$estimate/(1+femalefisher$estimate)*100))
+
+femalefisherlow <- (femalefisher$conf.int[1])
+
+femalefisherhigh<- (femalefisher$conf.int[2])
+
+efficacyfemalelow <- (femalefisherlow/(1+femalefisherlow)*100)
+
+efficacyfemalehigh <- (femalefisherhigh/(1+femalefisherhigh)*100)
+```
+
+
+
+
+
+
+
 
 
 
